# finally

./: README.md
.claude/agents/: reviewer.md
.github/workflows/: claude.yml
backend/: pyproject.toml
backend/market/: __init__.py  interface.py  massive.py  simulator.py
backend/tests/: test_interface.py  test_massive.py  test_simulator.py
planning/: MARKET_DATA_DESIGN.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md  REVIEW.md
